@@ -84,19 +84,18 @@ is no decimal point.  Examples:
   0.3
   77e5
 
-Next type is complex numbers.  To type a complex number you can just
-give it as a sum of real and imaginary parts.  An imaginary part ends
-with an i.  You cannot use 'i' by itself
-as then genius would think you want to use the variable 'i', so you need
-a number in front of it.  Use 1i instead.  Here are examples of entering
-complex numbers
+Next type is complex numbers.  To type a complex number you can just give it
+as a sum of real and imaginary parts.  An imaginary part ends with an i.  You
+cannot use 'i' by itself as then genius would think you want to use the
+variable 'i', so you need a number in front of it.  Use 1i instead.  Here are
+examples of entering complex numbers
   1+2i
   8.01i
   77*e^(1.3i)
 
 Note that to get mixed fraction notation to work right with imaginary numbers
-you must type the i after a parenthesis.  In fact this is another way to
-make a number imaginary (multiply by i)
+you must type the i after a parenthesis.  In fact this is another way to make
+a number imaginary (multiply by i)
   (1 2/5)i
 
 
@@ -705,7 +704,7 @@ MaxErrors               The maximum number of errors to return on one
 MixedFractions          If fractions should be printed as mixed fractions
                         such as "1 1/3" rather then "4/3"
 IntegerOutputBase       The base that will be used to output integers
-OutputStyle             A string, can be "normal", "latex" or "troff"
+OutputStyle             A string, can be "normal", "latex", "mathml" or "troff"
                         and it will effect how matrices (and perhaps other
                         stuff) is printed, useful for pasting into documents
 
