@@ -1,6 +1,8 @@
 Changes to 0.5.3
 
 * "a^b mod m" is now done sanely and fast just like the PowerMod function
+* Rudimentary MathML output support
+* Add Copy Answer As Plain/LaTeX/MathML/Troff menu items
 * Allow rationals and integers as complex numbers though this support is
   kind of experimental
 * Increase some limits on factorizations
@@ -27,6 +29,7 @@ Changes to 0.5.3
 * Allow reading arbitrarily long compiled file record lines
 * Some very minor leaks fixed
 * Fix precedence of : to be lower then that of standard arithmetic operators
+* And finally a new small easter egg
 
 Changes to 0.5.2
 
