@@ -1,3 +1,13 @@
+Wed Feb 26 10:06:11 2003  George Lebl <jirka@5z.com>
+
+	* src/genius.c, src/gnome-genius.c: Add Copy Answer As
+	  Plain/LaTeX/MathML/Troff menu items (to make the gui version at
+	  least somewhat more useful then the console version) and add
+	  a default answer to avoid errors on copy before anything has been
+	  entered.
+
+	* doc/manual.txt: update to add the mathml mode
+
 Wed Feb 26 09:27:24 2003  George Lebl <jirka@5z.com>
 
 	* src/calc.c: improve a teeeny bit on the mathml mode.  Produces
